# PCCG

./: LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: python-publish.yml
CLCG/: __init__.py
CLCG/test/: test.py
CLCG/utils/: CL.py  make_system.py  splines.py
MullerPotential/: MullerPotential.ipynb
MullerPotential/script/: contrastive_learning.py  contrastive_learning_all_samples.py  functions.py  main.py  plot_data_and_noise.py  sample_with_TREMC.py
MultipleProteins/data/structures/: 2JOF-0_CA_index.txt  2WAV-1_CA_index.txt  GTT-0_CA_index.txt  NTL9-1_CA_index.txt  NTL9-3_CA_index.txt  (+4 more)
MultipleProteins/info/: secondary_structure_extended.csv  secondary_structure_simple.csv  stride.txt
MultipleProteins/script/: 00README.rst  compute_LJ_basis.py  compute_TMscore.sh  compute_elec_energy_DH.py  compute_elec_energy_fshift.py  compute_log_q_imus.py  contrastive_learning.py  contrastive_learning.py~  get_structure_with_lowest_rmsd.py  make_init_md_traj.py  make_reference_structure.py  plot_LJ_potential.py~  run_im_NVT_sampling.py  run_im_umbrella_sampling.py~
Trp-cage/info/: stride.txt
Trp-cage/script/: compute_LJ_basis.py  compute_distance_hist.py  compute_elec_energy.py  compute_full_NVT_energy.py  compute_log_q_imus.py  contrastive_learning.py  contrastive_learning_nnforce.py  get_IC_md.py  plot_rmsd_nnforce.py  run_full_NVT_sampling.py  run_nnforce_NVT_sampling.py  run_nnforce_NVT_sampling.py~  submit_contrastive_learning.sh
examples/MullerPotential/: MullerPotential.ipynb
src/pccg/: CL.py  __init__.py
src/test/: test.R
(+145 files in other folders)
