[project]
name = "pccg"
version = "0.0.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "scipy>=1.16.1",
    "torch>=2.8.0",
]

[dependency-groups]
dev = [
    "ipython>=9.5.0",
    "notebook>=7.4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
